--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tugas 1 - Hadziq Fabroyir</title>
+  <title>Tugas 1 - Muhammad Afif Fadhlurrahman</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
-<body onload="main()">
-  <canvas width="400" height="600" id="leftCanvas">
+<body onclick="fullscreen()" onload="main()" onresize = "resize()">
+  <canvas id="leftCanvas">
     Peramban web ini tidak mendukung <code>&lt;canvas&gt;</code> HTML5.
   </canvas>
-  <canvas width="400" height="600" id="rightCanvas">
+  <canvas id="rightCanvas">
   </canvas>
   <script type="text/javascript" src="index.js"></script>
 </body>
