--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Tugas 1 - Hadziq Fabroyir</title>
-</head>
-<body onload="main()">
-  <canvas width="400" height="600" id="leftCanvas">
-    Peramban web ini tidak mendukung <code>&lt;canvas&gt;</code> HTML5.
-  </canvas>
-  <canvas width="400" height="600" id="rightCanvas">
-  </canvas>
-  <script type="text/javascript" src="index.js"></script>
-</body>
+	<head>
+		<title>05111840000093</title>
+		<style>
+            * {
+                margin: 0;
+                padding: 0;
+                height: 100%;
+                overflow-y: hidden;
+                background-color: white;
+            }
+            #rightCanvas {
+                float: right;
+            }
+        </style>
+	</head>
+	<body onload="InitDemo();" onresize = "resize()" onclick="fullscreen()">
+		<canvas id="model">
+			Your browser does not support HTML5
+		</canvas>
+		<br />
+		<i>Demo is above this text</i>
+		<script src="gl-matrix.js"></script>
+        <script src="app.js"></script>
+	</body>
 </html>
